fix: spacing between small elements

--- a/style.css
+++ b/style.css
@@ -21,6 +21,9 @@ body {
   width: 384px;
   border: 1px solid hsl(0, 0%, 7%);
   box-shadow: 10px 10px hsl(0, 0%, 7%);
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
 }
 
 .container-img {
@@ -28,9 +31,7 @@ body {
   border-radius: 10px;
 }
 
-.container-text {
-  padding: 24px 0;
-}
+
 
 .badge {
   background-color: hsl(47, 88%, 63%);
@@ -43,7 +44,7 @@ body {
   font-weight: 800;
   font-size: 14px;
   line-height: 150%;
-  padding: 5px 10px;
+  padding: 4px 12px;
 }
 
 .released-date {
@@ -77,12 +78,12 @@ body {
 .author {
   display: flex;
   align-items: center;
+  gap: 12px;
 }
 
 .author-avatar {
   width: 32px;
   height: 32px;
-  margin-right: 12px;
 }
 
 .author-name {
